fixed synopsis overlay on characters with z-index

--- a/src/components/characters.module.css
+++ b/src/components/characters.module.css
@@ -16,7 +16,7 @@
     line-height: 1;
     margin-left: 50px;
     top: 50px;
-    z-index: 2;
+    z-index: 1;
 
 }
 
