--- a/src/components/synopsis.module.css
+++ b/src/components/synopsis.module.css
@@ -12,7 +12,7 @@
     background: linear-gradient(180deg, rgba(5,1,32,1) 40%, rgba(5,1,32,0) 100%);
 }
 
-.synackground {
+.synBackground {
     overflow: scroll;
     color: white;
     position: absolute;
